# gw2-compression

./: CMakeLists.txt  README.md
include/compression/: Error.hpp  InflateDatFileBuffer.hpp  InflateTextureFileBuffer.hpp
include/gw2DatTools/compression/: inflateDatFileBuffer.h  inflateTextureFileBuffer.h
include/gw2DatTools/exception/: Exception.h
src/compression/: BitArray.hpp  HuffmanTree.hpp  HuffmanTreeUtils.cpp  HuffmanTreeUtils.hpp  InflateDatFileBuffer.cpp  InflateTextureFileBuffer.cpp
src/gw2DatTools/compression/: HuffmanTree.h  HuffmanTree.i  huffmanTreeUtils.cpp  huffmanTreeUtils.h  inflateDatFileBuffer.cpp  inflateTextureFileBuffer.cpp
src/gw2DatTools/exception/: Exception.cpp
src/gw2DatTools/utils/: BitArray.h  BitArray.i
